--- a/DeepCopyConstructor.Fody/DeepCopyConstructor.Fody.csproj
+++ b/DeepCopyConstructor.Fody/DeepCopyConstructor.Fody.csproj
@@ -6,5 +6,11 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FodyHelpers" Version="4.0.2" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" Condition="'$(TargetFramework)' == 'net46'">
+      <HintPath>..\..\..\..\.nuget\packages\microsoft.netcore.app\2.0.0\ref\netcoreapp2.0\System.ValueTuple.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
