--- a/AssemblyToProcess/AssemblyToProcess.csproj
+++ b/AssemblyToProcess/AssemblyToProcess.csproj
@@ -7,4 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DeepCopyConstructor\DeepCopyConstructor.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Facade" />
+  </ItemGroup>
 </Project>
