--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -6,8 +6,8 @@
     <DisableFody>true</DisableFody>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DeepCopyConstructor.Fody\DeepCopyConstructor.Fody.csproj" />
-    <ProjectReference Include="..\DeepCopyConstructor\DeepCopyConstructor.csproj" />
+    <ProjectReference Include="..\DeepCopy.Fody\DeepCopy.Fody.csproj" />
+    <ProjectReference Include="..\DeepCopy\DeepCopy.csproj" />
     <Reference Include="Microsoft.CSharp" />
     <PackageReference Include="FodyHelpers" Version="4.0.2" />
     <PackageReference Include="xunit" Version="2.4.1" />
