--- a/DeepCopy/DeepCopy.csproj
+++ b/DeepCopy/DeepCopy.csproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>net452;netstandard2.0</TargetFrameworks>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
-    <Authors>Oliver Ehrenmüller</Authors>
+    <Authors>Oliver Ehrenmueller</Authors>
     <Copyright>Copyright $([System.DateTime]::UtcNow.ToString(yyyy)).</Copyright>
     <Description>Injects deep copy constructors and methods.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
