--- a/DeepCopy.Fody/DeepCopy.Fody.csproj
+++ b/DeepCopy.Fody/DeepCopy.Fody.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>net46;netstandard2.0</TargetFrameworks>
     <DebugType>portable</DebugType>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FodyHelpers" Version="4.2.1" />
