--- a/SmokeTest/SmokeTest.csproj
+++ b/SmokeTest/SmokeTest.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DeepCopy.Fody\DeepCopy.Fody.csproj" />
     <ProjectReference Include="..\DeepCopy\DeepCopy.csproj" />
   </ItemGroup>
 
