--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,6 @@
 image: Visual Studio 2017
+version: '1.0.4.{build}'
+package_version: $(appveyor_build_version)
 build_script:
 - cmd: dotnet restore
 - cmd: dotnet msbuild -p:Configuration=Release
