--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,7 @@
 image: Visual Studio 2017
-version: '1.0.4.{build}'
 build_script:
 - cmd: dotnet restore
-- cmd: dotnet msbuild -p:Configuration=Release
+- cmd: dotnet msbuild -p:Configuration=Release -p:PackageVersion=$(appveyor_build_version) -p:AssemblyVersion=$(appveyor_build_version)
 test:
   assemblies:
     - '**\*Tests.dll'
