--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,8 @@
 image: Visual Studio 2017
+version: '1.0.4.{build}'
 build_script:
 - cmd: dotnet restore
-- cmd: dotnet msbuild -p:Configuration=Release -p:PackageVersion=$(appveyor_build_version) -p:AssemblyVersion=$(appveyor_build_version)
+- cmd: dotnet msbuild -p:Configuration=Release
 test:
   assemblies:
     - '**\*Tests.dll'
