--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,10 @@
 image: Visual Studio 2017
-version: '1.0.4.{build}'
+environment: 
+  PACKAGE_VERSION: 1.0.4
+  ASSEMBLY_VERSION: $(PACKAGE_VERSION).$(APPVEYOR_BUILD_NUMBER)
 build_script:
 - cmd: dotnet restore
-- cmd: dotnet msbuild -p:Configuration=Release
+- cmd: dotnet msbuild -p:Configuration=Release -p:PackageVersion=%PACKAGE_VERSION% -p:AssemblyVersion=%ASSEMBLY_VERSION%
 test:
   assemblies:
     - '**\*Tests.dll'
