--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,12 @@ environment:
   ASSEMBLY_VERSION: $(PACKAGE_VERSION).$(APPVEYOR_BUILD_NUMBER)
 build_script:
 - cmd: dotnet restore
-- cmd: dotnet msbuild -p:Configuration=Release -p:PackageVersion=%PACKAGE_VERSION% -p:AssemblyVersion=%ASSEMBLY_VERSION%
+- cmd: >
+    dotnet msbuild 
+    "-t:DeepCopy_Fody;DeepCopy;SmokeTest;AssemblyToProcess;Tests"
+    -p:Configuration=Release
+    -p:PackageVersion=%PACKAGE_VERSION%
+    -p:AssemblyVersion=%ASSEMBLY_VERSION%
 test:
   assemblies:
     - '**\*Tests.dll'
