#6 unit test for other assembly

--- a/AssemblyToProcess/AssemblyToProcess.csproj
+++ b/AssemblyToProcess/AssemblyToProcess.csproj
@@ -5,6 +5,7 @@
     <DisableFody>true</DisableFody>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AnotherAssembly\AnotherAssembly.csproj" />
     <ProjectReference Include="..\DeepCopy\DeepCopy.csproj" />
   </ItemGroup>
 </Project>
