--- a/DeepCopy/DeepCopy.csproj
+++ b/DeepCopy/DeepCopy.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net452;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
     <Authors>Oliver Ehrenmüller</Authors>
@@ -14,7 +14,7 @@
     <PackageIconUrl>https://github.com/greuelpirat/DeepCopy/blob/master/package_icon.png</PackageIconUrl>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Fody" Version="4.2.1" PrivateAssets="None" />
-    <PackageReference Include="FodyPackaging" Version="4.2.1" PrivateAssets="All" />
+    <PackageReference Include="Fody" Version="5.0.6" PrivateAssets="None" />
+    <PackageReference Include="FodyPackaging" Version="5.0.6" PrivateAssets="All" />
   </ItemGroup>
 </Project>
