--- a/AnotherAssembly/AnotherAssembly.csproj
+++ b/AnotherAssembly/AnotherAssembly.csproj
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>net46;netcoreapp2.2</TargetFrameworks>
+        <TargetFrameworks>net472;netcoreapp2.2</TargetFrameworks>
         <DisableFody>true</DisableFody>
     </PropertyGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\DeepCopy\DeepCopy.csproj" />
+    </ItemGroup>
 </Project>
