--- a/SmokeTest/SmokeTest.csproj
+++ b/SmokeTest/SmokeTest.csproj
@@ -6,14 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fody" Version="5.1.1">
+    <PackageReference Include="Fody" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
   <PropertyGroup>
-    <WeaverTargetFolder Condition="$(MSBuildRuntimeType) != 'Core'">Net46</WeaverTargetFolder>
+    <WeaverTargetFolder Condition="$(MSBuildRuntimeType) != 'Core'">net472</WeaverTargetFolder>
     <WeaverTargetFolder Condition="$(MSBuildRuntimeType) == 'Core'">netstandard2.0</WeaverTargetFolder>
   </PropertyGroup>
 
