--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-image: Visual Studio 2017
+image: Visual Studio 2019
 environment: 
   PACKAGE_VERSION: 1.0.13
   ASSEMBLY_VERSION: $(PACKAGE_VERSION).$(APPVEYOR_BUILD_NUMBER)
@@ -12,6 +12,7 @@ build_script:
     -p:AssemblyVersion=%ASSEMBLY_VERSION%
 test:
   assemblies:
-    - '**\*Tests.dll'
+    - 'Tests\bin\Release\net472\Tests.dll'
+    - 'Tests\bin\Release\netcoreapp2.2\Tests.dll'
 artifacts:
 - path: nugets\*.nupkg
