--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,15 +1,10 @@
 image: Visual Studio 2019
-environment: 
+environment:
   PACKAGE_VERSION: 1.0.13
   ASSEMBLY_VERSION: $(PACKAGE_VERSION).$(APPVEYOR_BUILD_NUMBER)
 build_script:
-- cmd: dotnet restore
-- cmd: >
-    dotnet msbuild 
-    "-t:DeepCopy_Fody;DeepCopy;SmokeTest;AssemblyToProcess;Tests"
-    -p:Configuration=Release
-    -p:PackageVersion=%PACKAGE_VERSION%
-    -p:AssemblyVersion=%ASSEMBLY_VERSION%
-- cmd: dotnet test
+  - cmd: dotnet restore
+  - cmd: dotnet build -c Release /p:PackageVersion=%PACKAGE_VERSION% /p:AssemblyVersion=%ASSEMBLY_VERSION%
+  - cmd: dotnet test
 artifacts:
-- path: nugets\*.nupkg
+  - path: nugets\DeepCopy.Fody.*.nupkg
