--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,6 @@ environment:
   ASSEMBLY_VERSION: $(PACKAGE_VERSION).$(APPVEYOR_BUILD_NUMBER)
 build_script:
   - cmd: dotnet build -c Release /p:PackageVersion=%PACKAGE_VERSION% /p:AssemblyVersion=%ASSEMBLY_VERSION%
-  - cmd: dotnet test
+  - cmd: dotnet test Tests
 artifacts:
   - path: nugets\DeepCopy.Fody.*.nupkg
