--- a/DeepCopy.Fody/DeepCopy.Fody.csproj
+++ b/DeepCopy.Fody/DeepCopy.Fody.csproj
@@ -3,7 +3,15 @@
   <PropertyGroup>
     <DebugType>portable</DebugType>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="FodyHelpers" Version="6.1.1" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
