--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\DeepCopy\DeepCopy.csproj" />
     <Reference Include="Microsoft.CSharp" />
     <PackageReference Include="FodyHelpers" Version="6.2.4" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
     <ProjectReference Include="..\AssemblyToProcess\AssemblyToProcess.csproj" />
