--- a/AnotherAssembly/AnotherAssembly.csproj
+++ b/AnotherAssembly/AnotherAssembly.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFrameworks>net472;netcoreapp2.2</TargetFrameworks>
         <DisableFody>true</DisableFody>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
     <ItemGroup>
       <ProjectReference Include="..\DeepCopy\DeepCopy.csproj" />
