--- a/DeepCopy.Fody/DeepCopy.Fody.csproj
+++ b/DeepCopy.Fody/DeepCopy.Fody.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <DebugType>portable</DebugType>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FodyHelpers" Version="6.2.4" />
