--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,5 +5,6 @@ environment:
 build_script:
   - cmd: dotnet build -c Release /p:PackageVersion=%PACKAGE_VERSION% /p:AssemblyVersion=%ASSEMBLY_VERSION%
   - cmd: dotnet test Tests
+  - cmd: dotnet pack
 artifacts:
   - path: nugets\DeepCopy.Fody.*.nupkg
