--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-image: Visual Studio 2019 Preview
+image: Visual Studio 2019
 environment:
   PACKAGE_VERSION: 1.0.15
   ASSEMBLY_VERSION: $(PACKAGE_VERSION).$(APPVEYOR_BUILD_NUMBER)
