--- a/AssemblyToProcess/AssemblyToProcess.csproj
+++ b/AssemblyToProcess/AssemblyToProcess.csproj
@@ -9,4 +9,7 @@
     <ProjectReference Include="..\AnotherAssembly\AnotherAssembly.csproj" />
     <ProjectReference Include="..\DeepCopy\DeepCopy.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
+  </ItemGroup>
 </Project>
