--- a/AnotherAssembly/AnotherAssembly.csproj
+++ b/AnotherAssembly/AnotherAssembly.csproj
@@ -8,4 +8,7 @@
     <ItemGroup>
       <ProjectReference Include="..\DeepCopy\DeepCopy.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="NETStandard.Library" Version="2.0.3" />
+    </ItemGroup>
 </Project>
