--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,15 +5,15 @@ on: [push]
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     strategy:
       matrix:
         dotnet-version: ['3.1.x']
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout
       - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
-        uses: actions/setup-dotnet@v1.7.2
+        uses: actions/setup-dotnet
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
       - name: Install dependencies
