--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,9 @@ jobs:
         dotnet-version: ['3.1.x']
 
     steps:
-      - uses: actions/checkout
+      - uses: actions/checkout@v2
       - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
-        uses: actions/setup-dotnet
+        uses: actions/setup-dotnet@v1.8.2
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
       - name: Install dependencies
