--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,17 +4,17 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: windows-latest
-    strategy:
-      matrix:
-        dotnet-version: ['3.1.x']
-
+    env:
+      PACKAGE_VERSION: 1.0.15
+      ASSEMBLY_VERSION: ${{ env.PACKAGE_VERSION }}.%GITHUB_RUN_ID%
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies
         run: dotnet restore
       - name: Build
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build --configuration Release --no-restore /p:AssemblyVersion=%ASSEMBLY_VERSION%
       - name: Test
-        run: dotnet test --no-restore --verbosity normal
+        run: dotnet test --no-build
+      - name: Package
+        run: dotnet pack --configuration Release /p:PackageVersion=%PACKAGE_VERSION% /p:AssemblyVersion=%ASSEMBLY_VERSION%
