--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,9 @@ environment:
   PACKAGE_VERSION: 1.0.15
   ASSEMBLY_VERSION: $(PACKAGE_VERSION).$(APPVEYOR_BUILD_NUMBER)
 build_script:
-  - cmd: dotnet build --configuration Release /p:AssemblyVersion=%ASSEMBLY_VERSION%
+  - cmd: dotnet --version
+  - cmd: dotnet restore
+  - cmd: dotnet build --configuration Release --no-restore /p:AssemblyVersion=%ASSEMBLY_VERSION%
   - cmd: dotnet test --configuration Release --no-build
   - cmd: dotnet pack --configuration Release /p:PackageVersion=%PACKAGE_VERSION% /p:AssemblyVersion=%ASSEMBLY_VERSION%
 artifacts:
