--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: windows-latest
     env:
       PACKAGE_VERSION: 1.0.15
-      ASSEMBLY_VERSION: ${{ PACKAGE_VERSION }}.${{ GITHUB_RUN_ID }}
+      ASSEMBLY_VERSION: ${{ env.PACKAGE_VERSION }}.${{ github.run_id }}
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies
