--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,11 +13,11 @@ jobs:
       - name: Install dependencies
         run: dotnet restore
       - name: Build
-        run: dotnet build --configuration Release --no-restore /p:AssemblyVersion=%PACKAGE_VERSION%.%GITHUB_RUN_ID%
+        run: dotnet build --configuration Release --no-restore /p:AssemblyVersion=%PACKAGE_VERSION%.%GITHUB_RUN_NUMBER%
       - name: Test
         run: dotnet test --configuration Release --no-build
       - name: Package
-        run: dotnet pack --configuration Release /p:PackageVersion=%PACKAGE_VERSION%%PACKAGE_VERSION_SUFFIX% /p:AssemblyVersion=%PACKAGE_VERSION%.%GITHUB_RUN_ID%
+        run: dotnet pack --configuration Release /p:PackageVersion=%PACKAGE_VERSION%%PACKAGE_VERSION_SUFFIX% /p:AssemblyVersion=%PACKAGE_VERSION%.%GITHUB_RUN_NUMBER%
       - name: Publish
         if: ${{ github.ref != 'refs/heads/main' }}
         run: dotnet nuget push nugets/DeepCopy.Fody.%PACKAGE_VERSION%%PACKAGE_VERSION_SUFFIX%.nupkg --source https://api.nuget.org/v3/index.json --api-key %NUGET_API_KEY%
