--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,25 +1,27 @@
 name: Build
 
 on: [push]
+env:
+  PACKAGE_VERSION: 1.0.16
 
 jobs:
   build:
     runs-on: windows-latest
-    env:
-      PACKAGE_VERSION: 1.0.16
-      PACKAGE_VERSION_SUFFIX: -ci
     steps:
       - name: Checkout  
         uses: actions/checkout@v2
-      - run: echo $env:PACKAGE_VERSION.$env:GITHUB_RUN_NUMBER
+      - name: Set assembly version
+        run: $env:ASSEMBLY_VERSION = "$env:PACKAGE_VERSION.$env:GITHUB_RUN_NUMBER"
+      - name: Set continuous package version
+        if: ${{ github.ref == '' }}
+        run: $env:PACKAGE_VERSION += Get-Date -f "-yyyyMMdd-hhmmss" 
       - name: Restore
         run: dotnet restore
       - name: Build
-        run: dotnet build --configuration Release --no-restore /p:AssemblyVersion=$env:PACKAGE_VERSION.$env:GITHUB_RUN_NUMBER
+        run: dotnet build --configuration Release --no-restore /p:AssemblyVersion=$env:ASSEMBLY_VERSION
       - name: Test
         run: dotnet test --configuration Release --no-build
       - name: Pack
-        run: dotnet pack --configuration Release /p:PackageVersion=$env:PACKAGE_VERSION$env:PACKAGE_VERSION_SUFFIX /p:AssemblyVersion=$env:PACKAGE_VERSION.$env:GITHUB_RUN_NUMBER
+        run: dotnet pack --configuration Release --no-build /p:PackageVersion=$env:PACKAGE_VERSION /p:AssemblyVersion=$env:ASSEMBLY_VERSION
       - name: Nuget push
-        if: ${{ github.ref != 'refs/heads/main' }}
-        run: dotnet nuget push nugets/DeepCopy.Fody.$env:PACKAGE_VERSION$env:PACKAGE_VERSION_SUFFIX.nupkg --source https://api.nuget.org/v3/index.json --api-key $env:NUGET_API_KEY
+        run: dotnet nuget push nugets/DeepCopy.Fody.$env:PACKAGE_VERSION.nupkg --source https://api.nuget.org/v3/index.json --api-key $env:NUGET_API_KEY
