--- a/DeepCopy/DeepCopy.csproj
+++ b/DeepCopy/DeepCopy.csproj
@@ -5,17 +5,22 @@
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
     <Authors>Oliver Ehrenmüller</Authors>
-    <Copyright>Copyright $([System.DateTime]::UtcNow.ToString(yyyy)).</Copyright>
+    <Copyright>Copyright (c) $([System.DateTime]::UtcNow.ToString(yyyy)) Oliver Ehrenmüller</Copyright>
     <Description>Injects deep copy constructors and methods for properties.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>Deep copy, ILWeaving, Fody, Cecil, AOP</PackageTags>
     <PackageOutputPath>$(SolutionDir)nugets</PackageOutputPath>
     <PackageProjectUrl>https://github.com/greuelpirat/DeepCopy</PackageProjectUrl>
-    <PackageIconUrl>https://raw.githubusercontent.com/greuelpirat/DeepCopy/master/package_icon.png</PackageIconUrl>
+    <PackageIcon>package_icon.png</PackageIcon>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Fody" Version="6.5.3" PrivateAssets="None" />
     <PackageReference Include="FodyPackaging" Version="6.5.3" PrivateAssets="All" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="../package_icon.png" Pack="true" PackagePath="\" />
+    <None Include="../readme.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 </Project>
