check for 'refs/heads/main'

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Set assembly version
         run: $env:ASSEMBLY_VERSION = "$env:PACKAGE_VERSION.$env:GITHUB_RUN_NUMBER"
       - name: Set continuous package version
-        if: ${{ github.ref == 'refs/head/main' }}
+        if: ${{ github.ref == 'refs/heads/main' }}
         run: $env:PACKAGE_VERSION += Get-Date -f "-yyyyMMdd-hhmmss" 
       - name: Restore
         run: dotnet restore
