--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: Build
 
-on: [push]
+on: [ push ]
 env:
   PACKAGE_VERSION: 1.0.16
 
@@ -8,16 +8,16 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-      - name: Checkout  
+      - name: Checkout
         uses: actions/checkout@v2
       - name: Set assembly version
-        run: $env:ASSEMBLY_VERSION = "$env:PACKAGE_VERSION.$env:GITHUB_RUN_NUMBER"
+        run: "echo ASSEMBLY_VERSION=\"$env:PACKAGE_VERSION.$env:GITHUB_RUN_NUMBER\" >> $env:GITHUB_ENV"
       - name: Set continuous package version
         if: ${{ github.ref == 'refs/heads/main' }}
-        run: $env:PACKAGE_VERSION += Get-Date -f "-yyyyMMdd-hhmmss" 
-      - run: "echo \"assembly version: $env:ASSEMBLY_VERSION\""
-      - run: "echo \"package version: $env:PACKAGE_VERSION\""
-      - run: "echo \"github_ref: $env:GITHUB_REF\""
+        run: "echo PACKAGE_VERSION=\"$env:PACKAGE_VERSION$(Get-Date -f \"-yyyyMMdd-hhmmss\") >> $env:GITHUB_ENV"
+      - run: |
+          echo "assembly version: $env:ASSEMBLY_VERSION"
+          echo "package version: $env:PACKAGE_VERSION"
       - name: Restore
         run: dotnet restore
       - name: Build
